force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/NCMT_RA_WI_Lookup_Details__c.object-meta.xml
<CustomObject>
    <description>RA WI Lookup Details</description>
    <label>RA WI Lookup Detail</label>
    <nameField>
        <label>RA WI Lookup Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RA WI Lookup Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>