force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/codename__c.field-meta.xml
<CustomField>
    <fullName>codename__c</fullName>
    <formula>WI_Category_Code__c + &apos; - &apos;+   WI_Category_Sub_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Code Name</label>
    <type>Text</type>
</CustomField>