force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Category__c</fullName>
    <label>Cost Category</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>RA WI Lookup Details</relationshipLabel>
    <relationshipName>RA_WI_Lookup_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>