force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Flag1__c.field-meta.xml
<CustomField>
    <fullName>Flag1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flag1</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>