force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Flag2__c.field-meta.xml
<CustomField>
    <fullName>Flag2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Flag2</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>