force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Parking__c.field-meta.xml
<CustomField>
    <fullName>Parking__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Parking</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>