force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Quantity_SF__c.field-meta.xml
<CustomField>
    <fullName>Quantity_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantity SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>