force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>LF</fullName>
            </value>
            <value>
                <fullName>GSF</fullName>
            </value>
            <value>
                <fullName>LFR</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>CY</fullName>
            </value>
            <value>
                <fullName>RF</fullName>
            </value>
            <value>
                <fullName>Acreft</fullName>
            </value>
            <value>
                <fullName>Gallon</fullName>
            </value>
            <value>
                <fullName>kVA</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>gal</fullName>
            </value>
            <value>
                <fullName>kW</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>CFM</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>