force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/WI_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>WI_Category_Code__c</fullName>
    <label>WI Category Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>