force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/WI_Category_Description__c.field-meta.xml
<CustomField>
    <fullName>WI_Category_Description__c</fullName>
    <label>WI Category Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>