force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/WI_Category_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>WI_Category_Sub_Type__c</fullName>
    <label>WI Category Sub Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>