force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Work_Item_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Category_Type__c</fullName>
    <label>Work Item Category Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>