force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/fields/Work_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Item_Type__c</fullName>
    <label>Work Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>