force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>WI_Category_Code__c</columns>
    <columns>Work_Item_Category_Type__c</columns>
    <columns>WI_Category_Sub_Type__c</columns>
    <columns>WI_Category_Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Low__c</columns>
    <columns>High__c</columns>
    <columns>UOM__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Flag1__c</columns>
    <columns>Flag2__c</columns>
    <columns>Parking__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>