force-app/main/default/objects/NCMT_RA_WI_Lookup_Details__c/listViews/FY_2016.listView-meta.xml
<ListView>
    <fullName>FY_2016</fullName>
    <columns>NAME</columns>
    <columns>Cost_Category__c</columns>
    <columns>Cost_Type__c</columns>
    <columns>WI_Category_Code__c</columns>
    <columns>Work_Item_Category_Type__c</columns>
    <columns>WI_Category_Sub_Type__c</columns>
    <columns>WI_Category_Description__c</columns>
    <columns>Rate__c</columns>
    <columns>Low__c</columns>
    <columns>High__c</columns>
    <columns>UOM__c</columns>
    <columns>Fiscal_Year__c</columns>
    <columns>Flag1__c</columns>
    <columns>Flag2__c</columns>
    <columns>Parking__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2016</value>
    </filters>
    <label>FY-2016</label>
</ListView>